--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+MuonPtFilter/python/__init__.pyc
 MuAlAnalyzer/MuAlRefit_Run2016E_RAWreco_DT3DOF_CSC3DOF_02
 */*/analyzer*.sh
 PerformancePlots/LSFJO*
